--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Nunito";
+}
+
 .thumbnail {
     padding: 0;
 }
@@ -8,6 +12,10 @@
 
 .thumbnail .caption-full {
     padding: 9px;
+}
+
+.login {
+    text-align: center;
 }
 
 #delete-form {
