--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>YelpCamp</title>
+        <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
