--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,13 @@
 <% include ./partials/header %>
 
-<h1>Login!</h1>
+<div class="container login">
+    <h1>Login!</h1>
 
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Submit</button>
-</form>
+    <form action="/login" method="POST">
+        <input type="text" name="username" placeholder="username">
+        <input type="password" name="password" placeholder="password">
+        <button>Submit</button>
+    </form>
+</div>
 
 <% include ./partials/footer %>
