more styling and mobile css

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,6 +9,7 @@
                 <li class="list-group-item">Info 2</li>
                 <li class="list-group-item">Info 3</li>
             </div>
+            <a id="back" href="/campgrounds">Go Back</a>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
