--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">YelpCamp</a>
             </div>
-            <div class="collapse navbar-collapse">
+            <!--<div class="collapse navbar-collapse">-->
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
                         <li><a href="/login">Login</a></li>
@@ -24,7 +24,7 @@
                         <li><a href="/logout">Logout</a></li>
                     <% } %>
                 </ul>
-            </div>
+            <!--</div>-->
         </div>
     </nav>
     
