--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,19 @@
 <div class="container login">
     <h1>Login!</h1>
 
-    <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="username">
-        <input type="password" name="password" placeholder="password">
-        <button>Submit</button>
-    </form>
+    <div class="form-style">
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="password">
+            </div>
+            <div class="form-group">
+                <button>Login</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <% include ./partials/footer %>
