--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <h1 style="text-align: center;">Create a new Campground</h1>
         
-        <div style="width: 30%; margin: 30px auto;">
+        <div class="form-style">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" placeholder="name" name="name"></input>
