--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,13 +3,12 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <p class="lead">YelpCamp</p>
+            <a class="lead" href="/campgrounds">YelpCamp</a>
             <div class="list-group">
                 <li class="list-group-item active">Info 1</li>
                 <li class="list-group-item">Info 2</li>
                 <li class="list-group-item">Info 3</li>
             </div>
-            <a id="back" href="/campgrounds">Go Back</a>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
