lots of styling and icon

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 
 <div class="container login">
     <h1>Login!</h1>
+    <a href="/register"><h5>(or sign up!)</h5></a>
 
     <div class="form-style">
         <form action="/login" method="POST">
