--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -27,6 +27,7 @@
         <% }); %>
     </div>
 </div>
-    
+
+<script type="text/javascript" src="/javascript/icon.js"></script>
 
 <% include ../partials/footer %>
