--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <h1 style="text-align: center;">Add New Comment to <%= campground.name %></h1>
         
-        <div style="width: 30%; margin: 30px auto;">
+        <div class="form-style">
             <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" placeholder="text"></input>
