--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,10 +33,6 @@ body {
     padding: 9px;
 }
 
-.login {
-    text-align: center;
-}
-
 .form-style {
     width: 30%; 
     margin: 30px auto;
@@ -44,6 +40,10 @@ body {
 
 .lead {
     display: inline-block;
+}
+
+.login-header {
+    text-align: center;
 }
 
 #input-comment {
@@ -61,4 +61,14 @@ body {
 
 #delete-form {
     display: inline;
+}
+
+/* Google Maps */
+#map {
+    height: 400px;
+    width: 100%;
+}
+
+#login-anchor {
+    margin-right: 15px;
 }
