--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -7,16 +7,24 @@
         <div style="width: 30%; margin: 30px auto;">
             <form action="/campgrounds/<%= campground._id %>/?_method=PUT" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>"></input>
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" name="name" value="<%= campground.name %>"></input>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01"></input>
+                    <label for="price">Price</label>
+                    <input class="form-control" type="number" name="price" value="<%= campground.price %>" min="0.01" step="0.01"></input>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="campground[image]" value="<%= campground.image %>"></input>
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" name="location" value="<%= campground.location %>" id="location"></input>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %>"></input>
+                    <label for="iamge">Image</label>
+                    <input class="form-control" type="text" name="image" value="<%= campground.image %>"></input>
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input class="form-control" type="text" name="description" value="<%= campground.description %>"></input>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
