--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -7,15 +7,23 @@
         <div class="form-style">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
+                    <label for="Name">Name</label>
                     <input class="form-control" type="text" placeholder="name" name="name"></input>
                 </div>
                 <div class="form-group">
+                    <label for="price">Price</label>
                     <input class="form-control" type="number" placeholder="price" name="price" min="0.01" step="0.01"></input>
                 </div>
                 <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" placeholder="Yosemite National Park, CA" name="location" id="location"></input>
+                </div>
+                <div class="form-group">
+                    <label for="image">Image</label>
                     <input class="form-control" type="text" placeholder="image url" name="image"></input>
                 </div>
                 <div class="form-group">
+                    <label for="description">Description</label>
                     <input class="form-control" type="text" placeholder="description" name="description"></input>
                 </div>
                 <div class="form-group">
