--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,11 @@
 <% include ./partials/header %>
 
 <div class="container login">
-    <h1>Login!</h1>
-    <a href="/register"><h5>(or sign up!)</h5></a>
-
     <div class="form-style">
+        <div class="login-header">
+            <h1><strong>Login!</strong></h1>
+            <a href="/register"><h5>(or sign up!)</h5></a>
+        </div>
         <form action="/login" method="POST">
             <div class="form-group">
                 <input class="form-control" type="text" name="username" placeholder="username">
@@ -13,9 +14,10 @@
                 <input class="form-control" type="password" name="password" placeholder="password">
             </div>
             <div class="form-group">
-                <button>Login</button>
+                <button class="btn btn-lg btn-primary btn-block">Login!</button>
             </div>
         </form>
+        <a href="/campgrounds">Go Back</a>
     </div>
 </div>
 
