--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,8 +18,8 @@
             <!--<div class="collapse navbar-collapse">-->
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Sign Up</a></li>
+                        <li id="login-anchor"><a href="/login">Login</a></li>
+                        <!--<li><a href="/register">Sign Up</a></li>-->
                     <% } else { %>
                         <li><a href="#">Signed In As <%= currentUser.username %></a></li>
                         <li><a href="/logout">Logout</a></li>
