--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,10 @@
 <% include ./partials/header %>
 
 <div class="container login">
-    <h1>Sign Up!</h1>
-
     <div class="form-style">
+        <div class="login-header">
+            <h1><strong>Sign Up!</strong></h1>
+        </div>
         <form action="/register" method="POST">
             <div class="form-group">
                 <input class="form-control" type="text" name="username" placeholder="username">
@@ -12,9 +13,10 @@
                 <input class="form-control" type="password" name="password" placeholder="password">
             </div>
             <div class="form-group">
-                <button>Sign Up</button>
+                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
             </div>
         </form>
+        <a href="/campgrounds">Go Back</a>
     </div>
 </div>
 
