took away ! in sub heading

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,7 @@
     <header class="jumbotron">
         <div class="container">
             <h1>Welcome to YelpCamp!</h1>
-            <p>The greatest repository of community moderated national and state parks!</p>
+            <p>The greatest repository of community moderated national and state parks</p>
             <p>
                 <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>
             </p>
