--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,9 @@
     <body>
         
     <nav class="navbar navbar-default">
-        <div class="container-fluid">
+        <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">YelpCamp <i class="fa fa-tree"></i></a>
+                <a class="navbar-brand" href="/campgrounds">YelpCamp <i class="fa fa-tree"></i></a>
             </div>
             <!--<div class="collapse navbar-collapse">-->
                 <ul class="nav navbar-nav navbar-right">
@@ -21,8 +21,16 @@
                         <li id="login-anchor"><a href="/login">Login</a></li>
                         <!--<li><a href="/register">Sign Up</a></li>-->
                     <% } else { %>
-                        <li><a href="#">Signed In As <%= currentUser.username %></a></li>
-                        <li><a href="/logout">Logout</a></li>
+                        <!--<li><a id="user-profile" href="#">Signed In As <= currentUser.username %></a></li>-->
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
+                            aria-expanded="false">Signed In As <%= currentUser.username %><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/profile">Profile</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/logout">Logout</a></li>
+                            </ul>   
+                        </li>
                     <% } %>
                 </ul>
             <!--</div>-->
