--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,10 @@ body {
     background-color: #C9F5C9;
 }
 
+hr {
+    border-top: 1px solid #5cb85c;
+}
+
 .jumbotron {
     background-color: #5cb85c;
     color: #fff;
@@ -27,14 +31,27 @@ body {
 
 .thumbnail {
     padding: 0;
+    background-color: #5cb85c;
 }
 
 .thumbnail img {
     width: 100%;
 }
 
+.thumbnail .caption {
+    color: #fff;
+}
+
 .thumbnail .caption-full {
     padding: 9px;
+}
+
+.caption-full {
+    color: #fff;
+}
+
+.caption-full a {
+    color: #fff;
 }
 
 .form-style {
