--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,8 @@
+        <footer class="footer">
+          <div class="container">
+            <p class="text-muted">&copy; YelpCamp 2017 | <a class="text-muted-anchor" href="/campgrounds">Home</a> | <a class="text-muted-anchor" href="/campgrounds/new">New Campground</a></p>
+          </div>
+        </footer>
         <!--jQuery CDN-->
         <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
