--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -27,6 +27,9 @@
  		<h1>Welcome to YelpCamp!</h1>
 		<a href="/campgrounds" class="btn btn-lg btn-success">Find Your Next Campground</a>
     </div>
+    <!--<div id="landing-header2">-->
+    <!--    <a href="/register"><h3>Create Your Free Account Now</h3></a>-->
+    <!--</div>-->
     
     <ul class="slideshow">
       <li></li>
