--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/campgrounds">YelpCamp <i class="fa fa-tree"></i></a>
+                <a class="navbar-brand" href="/">YelpCamp <i class="fa fa-tree"></i></a>
             </div>
             <!--<div class="collapse navbar-collapse">-->
                 <ul class="nav navbar-nav navbar-right">
