--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
         <footer class="footer">
           <div class="container">
-            <p class="text-muted">&copy; YelpCamp 2017 | <a class="text-muted-anchor" href="/campgrounds">Home</a> | <a class="text-muted-anchor" href="/campgrounds/new">New Campground</a></p>
+            <p class="text-muted">&copy; YelpCamp 2017 - John Clancy | <a class="text-muted-anchor" href="/campgrounds">Home</a> | 
+            <a class="text-muted-anchor" href="/campgrounds/new">New Campground</a> | <a class="text-muted-anchor" href="/about">About</a></p>
           </div>
         </footer>
         <!--jQuery CDN-->
