--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
                         <li id="login-anchor"><a href="/login">Login</a></li>
-                        <!--<li><a href="/register">Sign Up</a></li>-->
+                        <li><a href="/register">Sign Up</a></li>
                     <% } else { %>
                         <!--<li><a id="user-profile" href="#">Signed In As <= currentUser.username %></a></li>-->
                         <li class="dropdown">
