--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,12 +3,12 @@
 <div class="container">
     <div class="well" id="about">
         <h1>About YelpCamp</h1>
-        <p>YelpCamp was built by me, John Clancy, to showcase the skills and knowledge I learned during, and after, 
-        the Web Developer Bootcamp online course. I have implemented a lot of different techniques - both frontend and backend - 
-        in the design and implementation of the YelpCamp web app. For styling, I utilized <a href="http://getbootstrap.com/">Bootstrap</a> 
-        with my own custom CSS. Also, the web app has a fully featured <a href="https://www.mongodb.com/what-is-mongodb">MongoDB</a> 
-        backend that powers the uploading of users, campgrounds, comments, etc. Here is a list of the different packages that are 
-        currently used within the app:</p>
+        <hr class="about-contact">
+        <p>YelpCamp is an <a href="http://expressjs.com/">Express</a> web app built by me, John Clancy, to showcase the skills and knowledge I learned before, during, and after 
+        the <a href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/content">Web Developer Bootcamp</a> online course. I have implemented a lot of different techniques and technologies - both frontend and backend - 
+        in the design and implementation of the YelpCamp web app. Powering the backend structure of YelpCamp is <a href="https://www.mongodb.com/what-is-mongodb">MongoDB</a>, a fully featured 
+        database that powers the uploading of users, campgrounds, comments, etc. Here is a list of the different packages that are 
+        currently used within the app, thanks to <a href="https://nodejs.org/en/">Node.js:</a></p>
         <ul>
             <li>body-parser</li>
             <li>connect-flash</li>
@@ -24,7 +24,11 @@
             <li>passport-local</li>
             <li>passport-local-mongoose</li>
         </ul>
-        <p>Google Font: <a href="https://fonts.google.com/?query=nunito">'Nunito'</a></p>
+        <p>For the styling of the frontend I utilized <a href="http://getbootstrap.com/">Bootstrap</a> with my own custom CSS. Also, thank you Google Fonts: <a href="https://fonts.google.com/?query=nunito">'Nunito'</a></p>
+        <p>
+            YelpCamp is not "done." I intend to continuously update/add features as my experience and skills grow. An everchanging project. I hope you like what you see, and most of all, enjoy using YelpCamp!</br></br>Thank you,
+            </br>John</br>
+        </p>
     </div>
 </div>
 
