--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label for="location">Location</label>
-                    <input class="form-control" type="text" placeholder="Yosemite National Park, CA" name="location" id="location"></input>
+                    <input class="form-control" type="text" placeholder="Yosemite National Park, CA" name="location" id="location" required oninvalid="setCustomValidity('Does it exist in the aether?!')"></input>
                 </div>
                 <div class="form-group">
                     <label for="image">Image</label>
