--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
         <footer class="footer">
           <div class="container">
             <p class="text-muted">&copy; YelpCamp 2017 - John Clancy | <a class="text-muted-anchor" href="/campgrounds">Home</a> | 
-            <a class="text-muted-anchor" href="/campgrounds/new">New Campground</a> | <a class="text-muted-anchor" href="/about">About</a></p>
+            <a class="text-muted-anchor" href="/campgrounds/new">New Campground</a> | <a class="text-muted-anchor" href="/about">About</a> | 
+            <a class="text-muted-anchor" href="/contact">Contact</a></p>
           </div>
         </footer>
         <!--jQuery CDN-->
