updated DELETE routes for camp/comment

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,7 +24,8 @@
             <li>passport-local</li>
             <li>passport-local-mongoose</li>
         </ul>
-        <p>For the styling of the frontend I utilized <a href="http://getbootstrap.com/">Bootstrap</a> with my own custom CSS. Also, thank you Google Fonts: <a href="https://fonts.google.com/?query=nunito">'Nunito'</a></p>
+        <p>For the styling of the frontend I utilized <a href="http://getbootstrap.com/">Bootstrap</a> with my own custom CSS. Everything was designed, developed, and implemented 
+        using the excellent <a href="https://c9.io/?redirect=0">Cloud9 IDE</a>. Also, thank you Google Fonts: <a href="https://fonts.google.com/?query=nunito">'Nunito'</a></p>
         <p>
             YelpCamp is not "done." I intend to continuously update/add features as my experience and skills grow. An everchanging project. I hope you like what you see, and most of all, enjoy using YelpCamp!</br></br>Thank you,
             </br>John</br>
