--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -14,7 +14,7 @@
                 </div>
             </form>
             
-            <a href="/campgrounds">Go Back</a>
+            <a href="/campgrounds/<%= campground_id %>">Go Back</a>
         </div>
     </div>
 </div>
