--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,6 +13,6 @@
         <!--bootstrap js-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <!--custom frontend js-->
-        <script src="/javascript/frontend.js"></script>
+        <script src="/scripts/frontend.js"></script>
     </body>
 </html>
