--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -11,7 +11,7 @@
             <p>
                 <form action="/campgrounds" method="GET" class="form-inline" id="campground-search">
                     <div class="form-group">
-                      <input type="text" name="search" placeholder="Campground search..." class="form-control">
+                      <input id="camp-search" type="text" name="search" placeholder="Campground search..." class="form-control">
                     </div>
                 </form>
             </p>
