tweaked navbar signin

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,5 +14,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <!--custom frontend js-->
         <script src="/scripts/search.js"></script>
+        <script src="/scripts/frontend.js"></script>
     </body>
 </html>
