--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,17 +18,19 @@
             <!--<div class="collapse navbar-collapse">-->
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
-                        <li id="login-anchor"><a href="/login">Login</a></li>
+                        <li id="login-anchor"><a href="/login"><i class="fa fa-sign-in"></i> Login</a></li>
                         <li><a href="/register">Sign Up</a></li>
                     <% } else { %>
                         <!--<li><a id="user-profile" href="#">Signed In As <= currentUser.username %></a></li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
-                            aria-expanded="false">Signed In As <%= currentUser.username %><span class="caret"></span></a>
+                            aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span><span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li class="dropdown-header">Signed in as <%= currentUser.username %></li>
+                                <li role="separator" class="divider"></li>
                                 <li><a href="/profile">Profile</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="/logout">Logout</a></li>
+                                <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
                             </ul>   
                         </li>
                     <% } %>
