--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,6 +12,9 @@
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="password">
             </div>
+            <!--<div class="form-group">-->
+            <!--    <input class="form-control" type="email" name="email" placeholder="email">-->
+            <!--</div>-->
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
             </div>
