style changes and trying to get email auth to work

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -135,6 +135,14 @@ hr {
     width: 170px;
 }
 
+#questions {
+    margin-top: 35px;
+}
+
+#answer1, #answer2 {
+    margin-top: 10px;
+}
+
 @media (max-width: 767px) {
     body {
         margin-bottom: 80px;
