--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,10 +5,10 @@
 <div class="container">
     <h1><strong>Welcome back <%= currentUser.username %>!</strong></h1>
     <hr>
-    <!--<div class="well">-->
-    <!--    <h3>Username: <%= currentUser.username %></h3>-->
-    <!--    <h3>Email: <%= currentUser.email %></h3>-->
-    <!--</div>-->
+    <div class="well">
+        <h3>Username: <%= currentUser.username %></h3>
+        <h3>Email: <%= currentUser.email %></h3>
+    </div>
     <h2 id="profileCamps">Your Campgrounds</h2>
     <div class="row text-center" style="display: flex; flex-wrap: wrap;">
         <% campgrounds.forEach(function(campground){ %>
@@ -26,11 +26,9 @@
             </div>
         <% }); %>
     </div>
-    
-    <!--// if(count === 0) { -->
-    <!--//      changeH2ProfileText(); -->
-    <!--//  } -->
-    
+    <!--< if(count === 0) { %>-->
+    <!--    < changeH2ProfileText(); >-->
+    <!--< } %>-->
 </div>
 
 <% include ./partials/footer %>
