--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,8 +12,32 @@
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="password">
             </div>
-            <!--<div class="form-group">-->
-            <!--    <input class="form-control" type="email" name="email" placeholder="email">-->
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" placeholder="email" required>
+            </div>
+            <!--<div id="questions" class="form-group">-->
+            <!--    <label for="SecurityQuestions1">Security Question #1</label>-->
+            <!--    <select name="securityQuestions1">-->
+            <!--        <option value="What was the last name of your third grade teacher?">What was the last name of your third grade teacher?</option>-->
+            <!--        <option value="What was the name of the boy/girl you had your second kiss with?">What was the name of the boy/girl you had your second kiss with?</option>-->
+            <!--        <option value="What was the name of your second dog/cat/goldfish/etc?">What was the name of your second dog/cat/goldfish/etc?</option>-->
+            <!--        <option value="What is your oldest sister's middle name?">What is your oldest sister's middle name?</option>-->
+            <!--        <option value="When you were young, what did you want to be when you grew up?">When you were young, what did you want to be when you grew up?</option>-->
+            <!--    </select>-->
+            <!--    <div class="form-group">-->
+            <!--        <input id="answer1" class="form-control" type="text" name="questionInput1">-->
+            <!--    </div>-->
+            <!--    <label for="SecurityQuestions2">Security Question #2</label>-->
+            <!--    <select name="securityQuestions2">-->
+            <!--        <option value="Where were you when you first heard about 9/11?">Where were you when you first heard about 9/11?</option>-->
+            <!--        <option value="Where were you New Year's 2000?">Where were you New Year's 2000?</option>-->
+            <!--        <option value="What's your oldest brother's middle name?">What's your oldest brother's middle name?</option>-->
+            <!--        <option value="Who was your childhood hero?">Who was your childhood hero?</option>-->
+            <!--        <option value="What's your youngest sister's middle name?">What's your youngest sister's middle name?</option>-->
+            <!--    </select>-->
+            <!--    <div class="form-group">-->
+            <!--        <input id="answer2" class="form-control" type="text" name="questionInput2">-->
+            <!--    </div>-->
             <!--</div>-->
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
