--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
                     <% } else { %>
                         <% if(typeof page !== "undefined" && page === "profile"){ %>
                             <form class="navbar-form">
-                                <button class="btn btn-default">Change Theme</button>
+                                <button class="btn btn-default" id="theme-btn">Change Theme</button>
                             </form>
                         <% } %>
                         <li class="dropdown">
