--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,9 +22,9 @@
                         <li><a href="/register">Sign Up</a></li>
                     <% } else { %>
                         <% if(typeof page !== "undefined" && page === "profile"){ %>
-                            <!--<form class="navbar-form">-->
-                            <!--    <button class="btn btn-default" id="theme-btn">Change Theme</button>-->
-                            <!--</form>-->
+                            <form class="navbar-form">
+                                <button class="btn btn-default" id="theme-btn">Change Theme</button>
+                            </form>
                         <% } %>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
