--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,9 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/stylesheets/main.css" id="green-theme">
-        <link rel="stylesheet" href="/stylesheets/mainBlue.css" id="blue-theme">
-        <link rel="stylesheet" href="/stylesheets/mainDark.css" id="dark-theme">
+        <link rel="stylesheet" href="/stylesheets/<%= theme %>.css" id="theme-css">
     </head>
     <body>
         
