Updated User schema for favorite

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,7 @@
 <div class="container">
     <div class="jumbotron">
         <h1><strong>Welcome back <%= currentUser.username %>!</strong></h1>
+        <% console.log(currentUser.favorite) %>
         <p class="profile-info">Total Campgrounds: <%= campgrounds.length %></p>
         <p class="profile-info">Favorites: </p>
     </div>
