--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -29,7 +29,15 @@
                     <p>
                         <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
                     </p>
+                    
+                    <!--<i class="fa fa-star fa-lg" aria-hidden="true"></i>-->
+                    <!--<i class="fa fa-star fa-lg" aria-hidden="true"></i>-->
+                    <!--<i class="fa fa-star fa-lg" aria-hidden="true"></i>-->
+                    <!--<i class="fa fa-star fa-lg" aria-hidden="true"></i>-->
+                    <!--<i class="fa fa-star fa-lg" aria-hidden="true"></i>-->
+                    <!--<i class="fa fa-star fa-lg" aria-hidden="true"></i>-->
                 </div>
+                <!--<h4 id="favorite-caption">Favorite</h4>-->
             </div>
         <% }); %>
     </div>
