--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,20 +5,37 @@
         <div class="col-md-3">
             <!--<a class="lead" href="/campgrounds">YelpCamp</a>-->
             <div class="list-group">
-                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 1</li>
                 <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
+                <li class="list-group-item" id="favorite-li">Favorite</li>
             </div>
             <div id="map"></div>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= campground.image %>">
-                <div class="caption-full">
+                <div class="caption-full clearfix">
                     <h4 class="pull-right">$<%= campground.price %>/night</h4>
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
                     <p><em>Submitted by</em> <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></p>
+                    <% if(currentUser) { %>
+                        <form id="favorite-form" action="/favorites/<%= campground._id %>" method="GET">
+                            <!--< currentUser.favorites.forEach(function(favorite) { %>-->
+                            <!--    < if(favorite.equals("/campgrounds/"+campground._id)){ %>-->
+                            <!--        <button class="pull-right favorite-btn-on" id="favorite-btn"><i class="fa fa-star fa-2x" aria-hidden="true"></i></button>-->
+                            <!--    < } else { %>-->
+                            <!--        <submit class="pull-right" id="favorite-btn"><i class="fa fa-star fa-2x" aria-hidden="true"></i></submit>-->
+                            <!--    < } %>-->
+                            <!--< }); %>-->
+                            <button type="submit" class="pull-right <%= currentUser.favorites.indexOf("/campgrounds/"+campground._id) === 0 ? "favorite-btn-on" : "" %>" id="favorite-btn">
+                                <i class="fa fa-star fa-2x" aria-hidden="true"></i>
+                            </button>
+                            <!--<input type="submit" class="pull-right" id="favorite-btn">-->
+                            <!--<submit class="pull-right" id="favorite-btn"><i class="fa fa-star fa-2x" aria-hidden="true"></i></submit>-->
+                            <!--<button class="pull-right" id="favorite-btn"><i class="fa fa-star fa-2x" aria-hidden="true"></i></button>-->
+                        </form>
+                    <% } %>
                     <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
@@ -28,19 +45,14 @@
                 </div>
             </div>
             <div class="well">
-                <!--<div class="text-right">-->
-                <!--    <a class="btn btn-success" href="/campgrounds/< campground._id %>/comments/new">Add New Comment</a>-->
-                <!--</div>-->
-                <!--<div class="form-style">-->
-                    <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
-                        <div class="form-group">
-                            <input class="form-control" id="input-comment" type="text" name="comment[text]" placeholder="leave a comment"></input>
-                        </div>
-                        <div class="form-group" id="add-comment">
-                            <button class="btn btn-sm btn-primary btn-block responsive-btn">Add Comment</button>
-                        </div>
-                    </form>
-                <!--</div>-->
+                <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
+                    <div class="form-group">
+                        <input class="form-control" id="input-comment" type="text" name="comment[text]" placeholder="leave a comment"></input>
+                    </div>
+                    <div class="form-group" id="add-comment">
+                        <button class="btn btn-sm btn-primary btn-block responsive-btn">Add Comment</button>
+                    </div>
+                </form>
                 <hr>
                 <% campground.comments.forEach(function(comment){ %>
                     <div class="row">
