--- a/public/stylesheets/blue.css
+++ b/public/stylesheets/blue.css
@@ -112,6 +112,10 @@ hr {
     border: none;
 }
 
+.fa-star:hover {
+    color: yellow;
+}
+
 #input-comment {
     width: 50%;
 }
@@ -178,6 +182,11 @@ hr {
     height: 700px;
     background-color: #0C65C4;
     color: #fff;
+}
+
+#favorite-btn {
+    background-color: #0C65C4;
+    border: none;
 }
 
 @media (max-width: 767px) {
