--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -81,6 +81,10 @@ hr {
     color: #fff;
 }
 
+.fa-star:hover {
+    color: yellow;
+}
+
 .form-style {
     width: 30%; 
     margin: 30px auto;
@@ -104,6 +108,11 @@ hr {
 }
 
 .well {
+    border: none;
+}
+
+.favorite-btn-on {
+    color: yellow;
     border: none;
 }
 
@@ -165,6 +174,11 @@ hr {
     height: 700px;
     background-color: #5cb85c;
     color: #fff;
+}
+
+#favorite-btn {
+    background-color: #5cb85c;
+    border: none;
 }
 
 @media (max-width: 767px) {
