--- a/public/stylesheets/fav-btn.css
+++ b/public/stylesheets/fav-btn.css
@@ -1,3 +1,17 @@
+.delete-form {
+    display: inline;
+}
+
+.btn-warning {
+    color: #fff !important;
+    background-color: #f0ad4e !important;
+}
+
+.btn-danger {
+    color: #fff !important;
+    background-color: #d9534f !important;
+}
+
 .favorite-btn-on {
     color: yellow;
     border: none;
